--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,20 @@
 
 # Environment variables
 .env
+
+# LaTeX
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.cls
+*.log
+*.out
+*.synctex.gz
+fig-eps-converted-to.pdf
+bst/
+*.bib
+*.eps
+
+paper.md
