--- a/data.yaml
+++ b/data.yaml
@@ -1,16 +1,10 @@
 # Dataset paths
-train: 
-  - guns/train/images
-  - knives/train/images
-val: 
-  - guns/valid/images
-  - knives/valid/images
-test: 
-  - guns/test/images
-  - knives/test/images
+train: dangerous-objects/train/images
+val: dangerous-objects/valid/images
+test: dangerous-objects/test/images
 
 # Number of classes
-nc: 2
+nc: 6
 
 # Class names
-names: ['gun', 'Knife']
+names: ['ammo', 'firearm', 'grenade', 'knife', 'pistol', 'rocket']
