--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,13 @@ bst/
 *.bib
 *.eps
 
+# Temporary to not leak before publishing
 paper.md
 paper.pdf
+paper.docx
+
+# Word
+~$*.docx
 
 # Obsidian
 .obsidian
